# ai_infra

./: .gitignore  README.md  __init__.py  ai_infra.py  ai_models.yaml  pyproject.toml  requirements.txt
test/: conftest.py  test_ai_integration.py  test_api_connectivity.py  test_async_chat_completion.py  test_config_selection.py  test_deprecation.py  test_model_selection.py  test_streaming.py
