[project]
name = "ai-infra"
version = "0.1.0"
description = "AI infrastructure module for unified AI model interfaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30,<2.0",
    "google-genai>=1.50,<2.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.1",
    "redis>=5.0.1",
    "tiktoken>=0.5.1",
    "pydantic>=2.12,<3.0",
]

[tool.pytest.ini_options]
addopts = "-s -v"
asyncio_mode = "auto"
log_cli = true
log_cli_level = "DEBUG"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"